update notebooks: switch to GPT-5 models, adjust examples, and refresh outputs across tutorials

--- a/notebooks/spring-ai/SpringAI_Overview.ipynb
+++ b/notebooks/spring-ai/SpringAI_Overview.ipynb
@@ -16,8 +16,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:43.911579Z",
-     "start_time": "2025-12-01T15:29:42.968234Z"
+     "end_time": "2026-02-19T22:12:33.587990Z",
+     "start_time": "2026-02-19T22:12:33.127752Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_3_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -36,8 +41,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:43.981004Z",
-     "start_time": "2025-12-01T15:29:43.912419Z"
+     "end_time": "2026-02-19T22:12:33.654465Z",
+     "start_time": "2026-02-19T22:12:33.588499Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_4_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -53,15 +63,20 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:44.299716Z",
-     "start_time": "2025-12-01T15:29:43.981859Z"
+     "end_time": "2026-02-19T22:12:34.143584Z",
+     "start_time": "2026-02-19T22:12:33.656265Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_5_jupyter"
+     ]
     }
    },
    "cell_type": "code",
    "source": [
     "val openAiApi = OpenAiApi.builder().apiKey(apiKey).build()\n",
     "val openAiChatOptions = OpenAiChatOptions.builder()\n",
-    "    .model(OpenAiApi.ChatModel.GPT_4_O_MINI)\n",
+    "    .model(OpenAiApi.ChatModel.GPT_5_CHAT_LATEST)\n",
     "    .temperature(0.7)\n",
     "    .build()\n",
     "val chatModel = OpenAiChatModel.builder().openAiApi(openAiApi).defaultOptions(openAiChatOptions).build()"
@@ -81,8 +96,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:45.912851Z",
-     "start_time": "2025-12-01T15:29:44.300267Z"
+     "end_time": "2026-02-19T22:12:35.353379Z",
+     "start_time": "2026-02-19T22:12:34.144624Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_6_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -91,9 +111,9 @@
     {
      "data": {
       "text/plain": [
-       "Code flows like water,  \n",
-       "Kotlin's elegance unfolds—  \n",
-       "Breezy, smooth, and clear.  "
+       "Code flows like a stream,  \n",
+       "Soft syntax hums through the night—  \n",
+       "Logic blooms in spring."
       ]
      },
      "execution_count": 4,
@@ -111,8 +131,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:45.983195Z",
-     "start_time": "2025-12-01T15:29:45.922192Z"
+     "end_time": "2026-02-19T22:12:35.416605Z",
+     "start_time": "2026-02-19T22:12:35.361585Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_7_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -136,8 +161,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:51.043586Z",
-     "start_time": "2025-12-01T15:29:45.983909Z"
+     "end_time": "2026-02-19T22:12:37.053828Z",
+     "start_time": "2026-02-19T22:12:35.417639Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_8_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -152,11 +182,11 @@
     {
      "data": {
       "text/plain": [
-       "In the winding paths of fate, much like the journey of Frodo and Sam, what awaits you is often shrouded in uncertainty, veiled like the shadow of Mordor. Yet, take heed: within the unknown lies opportunity and growth. \n",
+       "Much that is hidden, and much that depends on the road you choose.  \n",
+       "As the wise in Rivendell would say, *“Even the smallest hand may shape the course of the future.”*  \n",
        "\n",
-       "Consider the wisdom of Elrond, who spoke of choices and the weight they carry. Your actions, like Bilbo's decision to leave the Shire, can lead to adventures unforeseen. Embrace the journey ahead with the courage of Aragorn and the heart of Samwise; for even in darkness, there is always a glimmer of hope.\n",
-       "\n",
-       "Remember, the road goes ever on and on, and it is not the destination that defines you, but the steps you take along the way. Seek the light, and you shall find your path."
+       "What awaits is not set in stone—it changes with courage, with fellowship, and with the choices made in both light and shadow.  \n",
+       "Walk with purpose, keep your heart open, and the path will reveal itself when the time is ripe."
       ]
      },
      "execution_count": 6,
@@ -188,8 +218,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:51.765272Z",
-     "start_time": "2025-12-01T15:29:51.044617Z"
+     "end_time": "2026-02-19T22:12:37.200707Z",
+     "start_time": "2026-02-19T22:12:37.055834Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_9_jupyter",
+      "Line_10_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -210,8 +246,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:52.894533Z",
-     "start_time": "2025-12-01T15:29:51.766330Z"
+     "end_time": "2026-02-19T22:12:38.544403Z",
+     "start_time": "2026-02-19T22:12:37.206252Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_11_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -233,9 +274,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kotlin whispers soft,  \n",
-      "Code flows like a gentle stream,  \n",
-      "Nature meets the code.  "
+      "Swift code dreams in gray,  \n",
+      "Kotlin whispers soft and clean—  \n",
+      "Logic hums in spring."
      ]
     }
    ],
@@ -260,8 +301,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:52.979698Z",
-     "start_time": "2025-12-01T15:29:52.906266Z"
+     "end_time": "2026-02-19T22:12:38.622619Z",
+     "start_time": "2026-02-19T22:12:38.544953Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_12_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -287,14 +333,19 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:53.025656Z",
-     "start_time": "2025-12-01T15:29:52.980486Z"
+     "end_time": "2026-02-19T22:12:38.661431Z",
+     "start_time": "2026-02-19T22:12:38.623180Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_13_jupyter"
+     ]
     }
    },
    "cell_type": "code",
    "source": [
     "val structuredOutputOptions = OpenAiChatOptions.builder()\n",
-    "    .model(OpenAiApi.ChatModel.GPT_4_O_MINI)\n",
+    "    .model(OpenAiApi.ChatModel.GPT_5_CHAT_LATEST)\n",
     "    .responseFormat(ResponseFormat.builder().type(ResponseFormat.Type.JSON_OBJECT).build())\n",
     "    .build()\n",
     "val chatModelWithStructuredOutput = OpenAiChatModel.builder().openAiApi(openAiApi).defaultOptions(structuredOutputOptions).build()"
@@ -310,8 +361,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:54.364822Z",
-     "start_time": "2025-12-01T15:29:53.026498Z"
+     "end_time": "2026-02-19T22:12:39.313598Z",
+     "start_time": "2026-02-19T22:12:38.661915Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_14_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -358,8 +414,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:55.348033Z",
-     "start_time": "2025-12-01T15:29:54.366601Z"
+     "end_time": "2026-02-19T22:12:40.621258Z",
+     "start_time": "2026-02-19T22:12:39.322205Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_15_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -368,7 +429,9 @@
     {
      "data": {
       "text/plain": [
-       "I'm unable to provide real-time weather updates. I recommend checking a reliable weather website or app for the most current conditions in Paris."
+       "I don’t have access to real-time data, including current weather. For the most accurate and up-to-date weather in Paris, I recommend checking a reliable weather service such as **Météo-France**, **BBC Weather**, or a weather app like **Weather.com** or **AccuWeather**.  \n",
+       "\n",
+       "If you want, I can tell you what the typical weather in Paris is like around this time of year — would you like that?"
       ]
      },
      "execution_count": 12,
@@ -386,8 +449,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:55.465591Z",
-     "start_time": "2025-12-01T15:29:55.368520Z"
+     "end_time": "2026-02-19T22:12:40.714769Z",
+     "start_time": "2026-02-19T22:12:40.625372Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_16_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -410,8 +478,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:55.521936Z",
-     "start_time": "2025-12-01T15:29:55.466431Z"
+     "end_time": "2026-02-19T22:12:40.753610Z",
+     "start_time": "2026-02-19T22:12:40.715234Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_17_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -452,8 +525,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:55.577463Z",
-     "start_time": "2025-12-01T15:29:55.522655Z"
+     "end_time": "2026-02-19T22:12:40.815500Z",
+     "start_time": "2026-02-19T22:12:40.756354Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_18_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -467,7 +545,7 @@
     "    ChatCompletionMessage.Role.USER\n",
     ")\n",
     "val chatCompletionRequest = ChatCompletionRequest(\n",
-    "    listOf(initialUserMessage), \"gpt-4o\",\n",
+    "    listOf(initialUserMessage), \"gpt-5.1\",\n",
     "    listOf(functionTool), ToolChoiceBuilder.AUTO\n",
     ")"
    ],
@@ -482,8 +560,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:56.429315Z",
-     "start_time": "2025-12-01T15:29:55.578255Z"
+     "end_time": "2026-02-19T22:12:41.817286Z",
+     "start_time": "2026-02-19T22:12:40.816065Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_19_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -496,7 +579,7 @@
     {
      "data": {
       "text/plain": [
-       "ChatCompletionMessage[rawContent=null, role=ASSISTANT, name=null, toolCallId=null, toolCalls=[ToolCall[index=null, id=call_ThwxemPYeaDhrNSgApiYWa0Q, type=function, function=ChatCompletionFunction[name=getCurrentWeather, arguments={\"location\":\"Paris, France\"}]]], refusal=null, audioOutput=null, annotations=[], reasoningContent=null]"
+       "ChatCompletionMessage[rawContent=null, role=ASSISTANT, name=null, toolCallId=null, toolCalls=[ToolCall[index=null, id=call_yIZFmh84CTukHABnUj3f6Fif, type=function, function=ChatCompletionFunction[name=getCurrentWeather, arguments={\"location\":\"Paris, France\"}]]], refusal=null, audioOutput=null, annotations=[], reasoningContent=null]"
       ]
      },
      "execution_count": 16,
@@ -523,8 +606,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:56.528538Z",
-     "start_time": "2025-12-01T15:29:56.442588Z"
+     "end_time": "2026-02-19T22:12:41.907147Z",
+     "start_time": "2026-02-19T22:12:41.826321Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_20_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -555,14 +643,19 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:29:57.646007Z",
-     "start_time": "2025-12-01T15:29:56.529274Z"
+     "end_time": "2026-02-19T22:12:42.993349Z",
+     "start_time": "2026-02-19T22:12:41.907625Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_21_jupyter"
+     ]
     }
    },
    "cell_type": "code",
    "source": [
     "val messages = mutableListOf(initialUserMessage, responseFromLLM, messageWithToolInvocation)\n",
-    "val functionResponseRequest = ChatCompletionRequest(messages, \"gpt-4o\", 0.2)\n",
+    "val functionResponseRequest = ChatCompletionRequest(messages, \"gpt-5.1\", 0.2)\n",
     "val resultingCompletion = openAiApi.chatCompletionEntity(functionResponseRequest)\n",
     "resultingCompletion.body!!.choices().first().message().content()"
    ],
@@ -570,7 +663,7 @@
     {
      "data": {
       "text/plain": [
-       "I'm unable to provide real-time weather updates. You might want to check a reliable weather website or app for the current weather in Paris."
+       "In Paris today it’s about 15°C, likely cool and mild. You’ll probably want a light jacket if you’re going out."
       ]
      },
      "execution_count": 18,
