--- a/notebooks/spring-ai/tutorials/1. Intro.ipynb
+++ b/notebooks/spring-ai/tutorials/1. Intro.ipynb
@@ -32,8 +32,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T13:54:29.569264Z",
-     "start_time": "2025-12-01T13:54:28.861181Z"
+     "end_time": "2026-02-19T22:14:33.694732Z",
+     "start_time": "2026-02-19T22:14:33.202648Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
@@ -84,8 +84,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T13:54:29.649698Z",
-     "start_time": "2025-12-01T13:54:29.571727Z"
+     "end_time": "2026-02-19T22:14:33.777472Z",
+     "start_time": "2026-02-19T22:14:33.695443Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
@@ -112,8 +112,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T13:54:29.973968Z",
-     "start_time": "2025-12-01T13:54:29.651203Z"
+     "end_time": "2026-02-19T22:14:34.224413Z",
+     "start_time": "2026-02-19T22:14:33.791580Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
@@ -137,8 +137,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T13:54:33.043024Z",
-     "start_time": "2025-12-01T13:54:29.975696Z"
+     "end_time": "2026-02-19T22:14:36.087201Z",
+     "start_time": "2026-02-19T22:14:34.224910Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
@@ -156,21 +156,21 @@
     "\n",
     "anthropicApi.chatCompletionEntity(\n",
     "    AnthropicApi.ChatCompletionRequest(\n",
-    "        AnthropicApi.ChatModel.CLAUDE_SONNET_4_0.value,\n",
+    "        AnthropicApi.ChatModel.CLAUDE_SONNET_4_5.value,\n",
     "        listOf(anthropicMessage), null, 100, 0.8, false\n",
     "    )\n",
     ")\n",
     "//openAiApi.chatCompletionEntity(\n",
-    "//    OpenAiApi.ChatCompletionRequest(listOf(openAiMessage), OpenAiApi.ChatModel.CHATGPT_4_O_LATEST.value, 0.8, false)\n",
+    "//    OpenAiApi.ChatCompletionRequest(listOf(openAiMessage), OpenAiApi.ChatModel.GPT_5_CHAT_LATEST.value, 0.8, false)\n",
     "//)"
    ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<200 OK OK,ChatCompletionResponse[id=msg_01PByqU55f2W72YbZ5WgcZLA, type=message, role=ASSISTANT, content=[ContentBlock[type=TEXT, source=null, text=Why don't scientists trust atoms?\n",
+       "<200 OK OK,ChatCompletionResponse[id=msg_01Uq1pL3ESv4y748HVFHNimM, type=message, role=ASSISTANT, content=[ContentBlock[type=TEXT, source=null, text=Why don't scientists trust atoms?\n",
        "\n",
-       "Because they make up everything!, index=null, id=null, name=null, input=null, toolUseId=null, content=null, signature=null, thinking=null, data=null, cacheControl=null, title=null, context=null, citations=null]], model=claude-sonnet-4-20250514, stopReason=end_turn, stopSequence=null, usage=Usage[inputTokens=11, outputTokens=17, cacheCreationInputTokens=0, cacheReadInputTokens=0]],[:status:\"200\", anthropic-organization-id:\"ea22ac71-22a7-43cc-9c6a-0a6a2c25768f\", anthropic-ratelimit-input-tokens-limit:\"16500000\", anthropic-ratelimit-input-tokens-remaining:\"16500000\", anthropic-ratelimit-input-tokens-reset:\"2025-12-01T13:54:31Z\", anthropic-ratelimit-output-tokens-limit:\"4250000\", anthropic-ratelimit-output-tokens-remaining:\"4250000\", anthropic-ratelimit-output-tokens-reset:\"2025-12-01T13:54:32Z\", anthropic-ratelimit-tokens-limit:\"20750000\", anthropic-ratelimit-tokens-remaining:\"20750000\", anthropic-ratelimit-tokens-reset:\"2025-12-01T13:54:31Z\", cf-cache-status:\"DYNAMIC\", cf-ray:\"9a7313aafac74f3e-TXL\", content-length:\"473\", content-type:\"application/json\", date:\"Mon, 01 Dec 2025 13:54:33 GMT\", request-id:\"req_011CVg5cfE9hAHNeSPPc3xUi\", retry-after:\"29\", server:\"cloudflare\", strict-transport-security:\"max-age=31536000; includeSubDomains; preload\", x-envoy-upstream-service-time:\"2647\", x-robots-tag:\"none\"]>"
+       "Because they make up everything! 😄, index=null, id=null, name=null, input=null, toolUseId=null, content=null, signature=null, thinking=null, data=null, cacheControl=null, title=null, context=null, citations=null, fileId=null, filename=null]], model=claude-sonnet-4-5-20250929, stopReason=end_turn, stopSequence=null, usage=Usage[inputTokens=11, outputTokens=20, cacheCreationInputTokens=0, cacheReadInputTokens=0], container=null],[Date:\"Thu, 19 Feb 2026 22:14:35 GMT\", Content-Type:\"application/json\", Transfer-Encoding:\"chunked\", Connection:\"keep-alive\", anthropic-ratelimit-output-tokens-limit:\"4250000\", anthropic-ratelimit-output-tokens-remaining:\"4250000\", anthropic-ratelimit-output-tokens-reset:\"2026-02-19T22:14:35Z\", anthropic-ratelimit-input-tokens-limit:\"16500000\", anthropic-ratelimit-input-tokens-remaining:\"16500000\", anthropic-ratelimit-input-tokens-reset:\"2026-02-19T22:14:35Z\", anthropic-ratelimit-requests-limit:\"20000\", anthropic-ratelimit-requests-remaining:\"19998\", anthropic-ratelimit-requests-reset:\"2026-02-19T22:14:34Z\", anthropic-ratelimit-tokens-limit:\"20750000\", anthropic-ratelimit-tokens-remaining:\"20750000\", anthropic-ratelimit-tokens-reset:\"2026-02-19T22:14:35Z\", X-Robots-Tag:\"none\", request-id:\"req_011CYJCTeqyYBmGQ2FkzpoXa\", strict-transport-security:\"max-age=31536000; includeSubDomains; preload\", anthropic-organization-id:\"ea22ac71-22a7-43cc-9c6a-0a6a2c25768f\", Server:\"cloudflare\", x-envoy-upstream-service-time:\"1315\", Content-Security-Policy:\"default-src 'none'; frame-ancestors 'none'\", cf-cache-status:\"DYNAMIC\", CF-RAY:\"9d091e315f84e50d-TXL\"]>"
       ]
      },
      "execution_count": 4,
@@ -196,8 +196,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T13:54:33.080994Z",
-     "start_time": "2025-12-01T13:54:33.043942Z"
+     "end_time": "2026-02-19T22:14:36.129983Z",
+     "start_time": "2026-02-19T22:14:36.088133Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
@@ -208,12 +208,12 @@
    "cell_type": "code",
    "source": [
     "val anthropicOptions = AnthropicChatOptions.builder()\n",
-    "    .model(AnthropicApi.ChatModel.CLAUDE_SONNET_4_0)\n",
+    "    .model(AnthropicApi.ChatModel.CLAUDE_SONNET_4_5)\n",
     "    .temperature(0.7)\n",
     "    .maxTokens(1024)\n",
     "    .build()\n",
     "//val openAiOptions = OpenAiChatOptions.builder()\n",
-    "//    .model(OpenAiApi.ChatModel.CHATGPT_4_O_LATEST)\n",
+    "//    .model(OpenAiApi.ChatModel.GPT_5_CHAT_LATEST)\n",
     "//    .temperature(0.7)\n",
     "//    .build()"
    ],
@@ -228,8 +228,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T13:54:33.117211Z",
-     "start_time": "2025-12-01T13:54:33.081698Z"
+     "end_time": "2026-02-19T22:14:36.167296Z",
+     "start_time": "2026-02-19T22:14:36.130515Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
@@ -259,8 +259,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T13:54:37.212823Z",
-     "start_time": "2025-12-01T13:54:33.117776Z"
+     "end_time": "2026-02-19T22:14:39.412650Z",
+     "start_time": "2026-02-19T22:14:36.167769Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
@@ -277,13 +277,13 @@
     {
      "data": {
       "text/plain": [
-       "Here's a Kotlin joke for you:\n",
+       "Why did the Kotlin developer break up with Java?\n",
        "\n",
-       "Why did the Java developer switch to Kotlin?\n",
+       "Because they got tired of all the `NullPointerException`s in the relationship! They wanted someone who was more null-safe. 😄\n",
        "\n",
-       "Because they were tired of writing `NullPointerException` love letters to their code! 💕\n",
+       "---\n",
        "\n",
-       "(In Kotlin, null safety is built into the type system, so you're much less likely to encounter those pesky NPEs that Java developers know all too well!)"
+       "*Bonus: In Kotlin, you can just add a `?` and move on with your life!*"
       ]
      },
      "execution_count": 7,
@@ -309,8 +309,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T13:54:41.063011Z",
-     "start_time": "2025-12-01T13:54:37.227811Z"
+     "end_time": "2026-02-19T22:14:41.454280Z",
+     "start_time": "2026-02-19T22:14:39.421687Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
@@ -327,11 +327,9 @@
     {
      "data": {
       "text/plain": [
-       "Why did the Java developer switch to Kotlin?\n",
+       "Why do Kotlin developers sleep so well?\n",
        "\n",
-       "Because they were tired of writing `public static void main(String[] args)` when they could just write `fun main()` and actually have fun! \n",
-       "\n",
-       "🎯 *Bonus punchline: They also got tired of null pointer exceptions ruining their day!*"
+       "Because they don't have to deal with NullPointerExceptions keeping them up at night!"
       ]
      },
      "execution_count": 8,
