--- a/notebooks/spring-ai/tutorials/3. Streaming.ipynb
+++ b/notebooks/spring-ai/tutorials/3. Streaming.ipynb
@@ -23,8 +23,16 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T14:25:27.762051Z",
-     "start_time": "2025-12-01T14:25:26.846515Z"
+     "end_time": "2026-02-19T22:18:08.078531Z",
+     "start_time": "2026-02-19T22:18:07.197474Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_3_jupyter",
+      "Line_4_jupyter",
+      "Line_5_jupyter",
+      "Line_6_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -72,8 +80,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T14:25:27.829189Z",
-     "start_time": "2025-12-01T14:25:27.762778Z"
+     "end_time": "2026-02-19T22:18:08.144977Z",
+     "start_time": "2026-02-19T22:18:08.079429Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_7_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -89,15 +102,20 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T14:25:28.192138Z",
-     "start_time": "2025-12-01T14:25:27.831352Z"
+     "end_time": "2026-02-19T22:18:08.645269Z",
+     "start_time": "2026-02-19T22:18:08.145563Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_8_jupyter"
+     ]
     }
    },
    "cell_type": "code",
    "source": [
     "val openAiApi = OpenAiApi.builder().apiKey(apiKey).build()\n",
     "val openAiOptions = OpenAiChatOptions.builder()\n",
-    "    .model(OpenAiApi.ChatModel.GPT_4_O_MINI)\n",
+    "    .model(OpenAiApi.ChatModel.GPT_5_CHAT_LATEST)\n",
     "    .temperature(0.7)\n",
     "    .build()\n",
     "\n",
@@ -117,8 +135,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T14:25:34.743914Z",
-     "start_time": "2025-12-01T14:25:28.193746Z"
+     "end_time": "2026-02-19T22:18:11.872160Z",
+     "start_time": "2026-02-19T22:18:08.645830Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_9_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -136,11 +159,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Once upon a time in a lush, green forest, there lived a clever rabbit named Benny who dreamed of becoming the fastest runner in all the land. Benny challenged the boastful tortoise, Timmy, to a race, confident that his speed would secure him victory. As the race began, Benny sprinted ahead, leaving Timmy far behind, and decided to take a nap under a shady tree. Meanwhile, Timmy kept plodding along, steady and determined, never once stopping to rest. \n",
-      "\n",
-      "When Benny awoke, he panicked and dashed towards the finish line, but it was too late; Timmy had crossed it triumphantly, proving that perseverance beats arrogance. The animals of the forest celebrated Timmy's victory with a grand feast, inviting Benny to join and learn from his mistake. Realizing the importance of humility, Benny promised to train harder and respect his fellow creatures' strengths. From that day on, he and Timmy became the best of friends, often racing together but always encouraging one another. \n",
-      "\n",
-      "As the seasons changed, Benny shared his newfound wisdom with other rabbits, teaching them that true greatness lies not just in speed, but in heart and friendship. And so, in that enchanted forest, the rabbits thrived, united by the lessons of a tortoise who taught them that slow and steady truly wins the race."
+      "Once upon a time, in a sun-dappled meadow, there lived a family of clever rabbits.  \n",
+      "Every morning, the youngest rabbit, Pippin, raced the wind to see who was faster.  \n",
+      "One day, he discovered a golden acorn hidden beneath a patch of clover.  \n",
+      "The acorn shimmered with magic, whispering promises of adventure and courage.  \n",
+      "Pippin carried it to the wise old rabbit, Willow, who lived beneath the tallest oak.  \n",
+      "Willow told him the acorn could grant one wish—but only if his heart was pure.  \n",
+      "That night, as stars danced above, Pippin wished for the meadow to stay safe forever.  \n",
+      "The next morning, a gentle rain fell, and the grass glowed greener than ever before.  \n",
+      "The foxes who once prowled nearby vanished into distant woods, never to return.  \n",
+      "And from that day on, the rabbits lived in peace, telling Pippin’s story under the moonlight."
      ]
     }
    ],
@@ -160,8 +188,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T14:25:42.305431Z",
-     "start_time": "2025-12-01T14:25:34.746001Z"
+     "end_time": "2026-02-19T22:18:14.561491Z",
+     "start_time": "2026-02-19T22:18:11.873191Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_10_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -183,13 +216,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Once upon a time in a lush, green meadow, there lived a clever rabbit named Ruby who dreamed of discovering the hidden treasures of the Enchanted Forest. One sunny morning, Ruby decided to gather her friends — Benny the brave bunny, and Lily the wise old tortoise — to embark on an adventure. As they hopped along the winding path, they stumbled upon a sparkling stream filled with shimmering fish that danced like stars in the water. \n",
-      "\n",
-      "Suddenly, a mischievous fox appeared, claiming to know the secret to finding the treasure, but only if Ruby could solve his riddle. With her quick wit, Ruby answered the riddle, impressing the fox, who reluctantly decided to guide them deeper into the forest. The trio encountered magical creatures along the way, including a singing bird with feathers of gold and a gentle deer who offered them guidance. \n",
-      "\n",
-      "After crossing a bridge made of rainbows, they finally reached a hidden glade where an ancient oak tree stood, its trunk wrapped in vines and glowing with an otherworldly light. Beneath the tree, they discovered a chest filled with sparkling gemstones and enchanted carrots that could grant wishes. Ruby, Benny, and Lily decided to share their newfound treasure with all the animals of the meadow, ensuring that everyone could enjoy the magic. \n",
-      "\n",
-      "From that day on, the meadow thrived with happiness and friendship, reminding all who lived there that true treasure lies in the bonds we create and the adventures we share. And so, Ruby and her friends continued to explore, their hearts forever filled with the spirit of adventure and the joy of togetherness."
+      "Once upon a time, in a sunlit meadow bordered by whispering pines, lived a family of clever rabbits.  \n",
+      "The youngest rabbit, named Lila, had fur as white as clouds and eyes full of curiosity.  \n",
+      "Every morning, she hopped beyond the burrow, eager to discover something new.  \n",
+      "One day, she found a mysterious golden leaf that shimmered even in the shade.  \n",
+      "When she touched it, a gentle voice whispered, “Follow the light, and your courage will be rewarded.”  \n",
+      "Lila followed the golden glow through twisting roots and mossy stones until she reached a hidden glade.  \n",
+      "There, a wise old owl told her that the forest’s heart had grown dim because the moonstone had been stolen.  \n",
+      "Determined to help, Lila gathered her bravest friends and set off on a moonlit quest.  \n",
+      "Together, they outwitted a sly fox, crossed a rushing brook, and found the moonstone in a hollow log.  \n",
+      "When they returned it to the forest’s heart, the woods sparkled once more, and the rabbits danced beneath the silver light."
      ]
     }
    ],
