--- a/notebooks/spring-ai/tutorials/4. Tools.ipynb
+++ b/notebooks/spring-ai/tutorials/4. Tools.ipynb
@@ -30,8 +30,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:24:54.606504Z",
-     "start_time": "2025-05-11T18:24:53.621265Z"
+     "end_time": "2026-02-19T22:38:26.083441Z",
+     "start_time": "2026-02-19T22:38:25.571892Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_3_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -45,8 +50,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:24:56.366722Z",
-     "start_time": "2025-05-11T18:24:56.059872Z"
+     "end_time": "2026-02-19T22:38:26.647807Z",
+     "start_time": "2026-02-19T22:38:26.084044Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_4_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -55,7 +65,7 @@
     "\n",
     "val openAiApi = OpenAiApi.builder().apiKey(apiKey).build()\n",
     "val openAiOptions = OpenAiChatOptions.builder()\n",
-    "    .model(OpenAiApi.ChatModel.GPT_4_O_MINI)\n",
+    "    .model(OpenAiApi.ChatModel.GPT_5_CHAT_LATEST)\n",
     "    .temperature(0.7)\n",
     "    .build()\n",
     "\n",
@@ -90,8 +100,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:25:02.927225Z",
-     "start_time": "2025-05-11T18:25:02.745963Z"
+     "end_time": "2026-02-19T22:38:26.880270Z",
+     "start_time": "2026-02-19T22:38:26.648482Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_5_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -154,8 +169,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:25:09.544566Z",
-     "start_time": "2025-05-11T18:25:05.776233Z"
+     "end_time": "2026-02-19T22:38:29.253520Z",
+     "start_time": "2026-02-19T22:38:26.881500Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_6_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -170,9 +190,9 @@
     {
      "data": {
       "text/plain": [
-       "The plant you found with purple flowers and fuzzy leaves is likely **Lamb's Ear** (scientific name: *Stachys byzantina*). It's known for its soft, fuzzy leaves and can add beauty to your garden.\n",
+       "The plant with purple flowers and fuzzy leaves is likely **Lamb’s Ear** (*Stachys byzantina*), a non-invasive perennial known for its soft, silvery foliage.  \n",
        "\n",
-       "As for planting tomatoes in USDA hardiness zone 7b, the best time to plant is between **April 15** and **May 30**. Make sure to wait until the soil temperature reaches **60°F** before planting for optimal growth."
+       "For **tomatoes** in **zone 7b**, the best planting window is from **April 15 to May 30**. Be sure to wait until the soil temperature reaches **at least 60°F** before planting for optimal growth."
       ]
      },
      "execution_count": 4,
@@ -197,8 +217,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:25:10.998381Z",
-     "start_time": "2025-05-11T18:25:10.705222Z"
+     "end_time": "2026-02-19T22:38:29.505422Z",
+     "start_time": "2026-02-19T22:38:29.256217Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_7_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -223,6 +248,7 @@
     ")\n",
     "\n",
     "class RecipeService : (RecipeRequest) -> RecipeResponse {\n",
+    "\n",
     "    override fun invoke(request: RecipeRequest): RecipeResponse {\n",
     "        return when {\n",
     "            request.ingredients.containsAll(listOf(\"pasta\", \"tomato\")) -> {\n",
@@ -277,14 +303,20 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:25:16.020542Z",
-     "start_time": "2025-05-11T18:25:15.940562Z"
+     "end_time": "2026-02-19T22:38:29.658137Z",
+     "start_time": "2026-02-19T22:38:29.507132Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_8_jupyter"
+     ]
     }
    },
    "cell_type": "code",
    "source": [
+    "val recipeService = RecipeService()\n",
     "val recipeToolCallback = FunctionToolCallback\n",
-    "    .builder(\"recipeRecommender\", RecipeService())\n",
+    "    .builder(\"recipeRecommender\", recipeService::invoke)\n",
     "    .description(\"Get recipe ideas based on ingredients and time available\")\n",
     "    .inputType(RecipeRequest::class.java)\n",
     "    .build()"
@@ -300,14 +332,19 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T18:25:26.356609Z",
-     "start_time": "2025-05-11T18:25:17.509239Z"
+     "end_time": "2026-02-19T22:38:32.542213Z",
+     "start_time": "2026-02-19T22:38:29.681868Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_9_jupyter"
+     ]
     }
    },
    "cell_type": "code",
    "source": [
     "chatClient.prompt(\"I have pasta and tomatoes. What can I make for dinner?\")\n",
-    "    .tools(recipeToolCallback)\n",
+    "    .toolCallbacks(recipeToolCallback)\n",
     "    .call()\n",
     "    .content()"
    ],
@@ -315,28 +352,19 @@
     {
      "data": {
       "text/plain": [
-       "With pasta and tomatoes, you have the base for a delicious meal! Here are a few ideas:\n",
+       "With pasta and tomatoes, you’ve already got the base for several great dinner options! Here are a few ideas:  \n",
        "\n",
-       "1. **Spaghetti with Tomato Sauce**: \n",
-       "   - Cook the pasta according to package instructions. \n",
-       "   - In a pan, sauté garlic and onions in olive oil, then add chopped tomatoes (fresh or canned) along with salt, pepper, and herbs like basil or oregano. Simmer until the sauce thickens, then toss with the cooked pasta.\n",
+       "1. **Classic Tomato Pasta (Pasta al Pomodoro)** – Sauté garlic in olive oil, add chopped tomatoes (fresh or canned), season with salt, pepper, and herbs like basil or oregano. Toss with cooked pasta and finish with a drizzle of olive oil and Parmesan if you have it.  \n",
        "\n",
-       "2. **Pasta Primavera**: \n",
-       "   - Cook pasta and set aside. In a pan, sauté seasonal vegetables (like bell peppers, zucchini, and broccoli) in olive oil. Add chopped tomatoes, garlic, and herbs, then combine with the cooked pasta.\n",
+       "2. **Tomato and Garlic Spaghetti** – Cook spaghetti, then quickly sauté sliced garlic and chili flakes in olive oil. Add diced tomatoes and simmer a few minutes. Toss everything together for a light, flavorful dish.  \n",
        "\n",
-       "3. **Caprese Pasta**: \n",
-       "   - Cook pasta and toss it with diced fresh tomatoes, mozzarella balls, fresh basil, olive oil, balsamic vinegar, salt, and pepper for a refreshing dish.\n",
+       "3. **Pasta with Tomato and Olive Sauce** – Add olives, capers, and maybe a bit of anchovy (if you have any) to a tomato sauce for a Mediterranean twist.  \n",
        "\n",
-       "4. **Pasta Arrabbiata**: \n",
-       "   - Sauté garlic and red pepper flakes in olive oil, add chopped tomatoes, and simmer. Toss with cooked pasta and finish with fresh parsley or basil.\n",
+       "4. **Creamy Tomato Pasta** – Stir in a splash of cream, milk, or even cream cheese to your tomato sauce for a richer, silky texture.  \n",
        "\n",
-       "5. **Pasta Bake**: \n",
-       "   - Mix cooked pasta with a tomato sauce, add cheese (like mozzarella or ricotta), and bake until bubbly and golden.\n",
+       "5. **Baked Pasta with Tomato Sauce** – Combine cooked pasta with tomato sauce, sprinkle with cheese (mozzarella or Parmesan), and bake until bubbly.  \n",
        "\n",
-       "6. **Pasta Salad**: \n",
-       "   - Combine cooked and cooled pasta with chopped tomatoes, olives, feta cheese, and a dressing of olive oil, vinegar, salt, and pepper.\n",
-       "\n",
-       "Feel free to customize these recipes with any additional ingredients you have on hand! Enjoy your dinner!"
+       "Would you like me to tailor a recipe for you based on how much time you have to cook?"
       ]
      },
      "execution_count": 7,
