--- a/notebooks/spring-ai/tutorials/5. Structured Outputs.ipynb
+++ b/notebooks/spring-ai/tutorials/5. Structured Outputs.ipynb
@@ -24,8 +24,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:09:09.196982Z",
-     "start_time": "2025-12-01T15:09:08.172094Z"
+     "end_time": "2026-02-19T22:39:24.522352Z",
+     "start_time": "2026-02-19T22:39:24.031733Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
@@ -47,8 +47,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:09:09.569425Z",
-     "start_time": "2025-12-01T15:09:09.198832Z"
+     "end_time": "2026-02-19T22:39:25.092486Z",
+     "start_time": "2026-02-19T22:39:24.523363Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
@@ -62,7 +62,7 @@
     "\n",
     "val openAiApi = OpenAiApi.builder().apiKey(apiKey).build()\n",
     "val openAiOptions = OpenAiChatOptions.builder()\n",
-    "    .model(OpenAiApi.ChatModel.GPT_4_O_MINI)\n",
+    "    .model(OpenAiApi.ChatModel.GPT_5_CHAT_LATEST)\n",
     "    .temperature(0.7)\n",
     "    .build()\n",
     "\n",
@@ -84,12 +84,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:09:10.914494Z",
-     "start_time": "2025-12-01T15:09:09.570001Z"
+     "end_time": "2026-02-19T22:39:27.284975Z",
+     "start_time": "2026-02-19T22:39:25.093469Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
-      "Line_7_jupyter"
+      "Line_7_jupyter",
+      "Line_8_jupyter",
+      "Line_9_jupyter"
      ]
     }
    },
@@ -135,12 +137,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:09:11.172636Z",
-     "start_time": "2025-12-01T15:09:10.921959Z"
+     "end_time": "2026-02-19T22:39:27.491178Z",
+     "start_time": "2026-02-19T22:39:27.285574Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
-      "Line_8_jupyter"
+      "Line_10_jupyter"
      ]
     }
    },
@@ -184,12 +186,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:09:11.272221Z",
-     "start_time": "2025-12-01T15:09:11.174025Z"
+     "end_time": "2026-02-19T22:39:27.572766Z",
+     "start_time": "2026-02-19T22:39:27.500511Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
-      "Line_9_jupyter"
+      "Line_11_jupyter"
      ]
     }
    },
@@ -216,12 +218,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:09:14.193709Z",
-     "start_time": "2025-12-01T15:09:11.272839Z"
+     "end_time": "2026-02-19T22:39:29.149009Z",
+     "start_time": "2026-02-19T22:39:27.607219Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
-      "Line_10_jupyter"
+      "Line_12_jupyter"
      ]
     }
    },
@@ -238,7 +240,7 @@
     {
      "data": {
       "text/plain": [
-       "MobileDevice(name=SuperPhone XZ, price=999.99, category=smartphone, features=[6.7-inch AMOLED display, 128GB internal storage, 12GB RAM, Triple rear camera setup, 5G connectivity, 4000mAh battery, Wireless charging, IP68 water and dust resistance])"
+       "MobileDevice(name=iPhone 15 Pro Max, price=1199.0, category=smartphone, features=[6.7-inch OLED display with 120Hz refresh rate, A18 Pro chip with improved neural engine, Triple-lens rear camera with 5x optical zoom, Enhanced battery life with 30W fast charging, 5G connectivity and Wi-Fi 7 support, Titanium frame with IP68 water resistance, Face ID and under-display fingerprint sensor, iOS 18 with AI-powered features])"
       ]
      },
      "execution_count": 6,
@@ -247,18 +249,6 @@
     }
    ],
    "execution_count": 6
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-01T15:09:14.198727Z",
-     "start_time": "2025-12-01T15:09:14.194477Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "outputs": [],
-   "execution_count": 7
   }
  ],
  "metadata": {
