--- a/notebooks/spring-ai/tutorials/6. Advisors.ipynb
+++ b/notebooks/spring-ai/tutorials/6. Advisors.ipynb
@@ -21,14 +21,14 @@
   },
   {
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-19T22:40:17.781009Z",
+     "start_time": "2026-02-19T22:40:17.379219Z"
+    },
     "executionRelatedData": {
      "compiledClasses": [
       "Line_3_jupyter"
      ]
-    },
-    "ExecuteTime": {
-     "end_time": "2025-12-01T15:11:12.221472Z",
-     "start_time": "2025-12-01T15:11:11.130541Z"
     }
    },
    "cell_type": "code",
@@ -42,8 +42,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:11:12.584541Z",
-     "start_time": "2025-12-01T15:11:12.222821Z"
+     "end_time": "2026-02-19T22:40:18.321321Z",
+     "start_time": "2026-02-19T22:40:17.781511Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
@@ -57,7 +57,7 @@
     "\n",
     "val openAiApi = OpenAiApi.builder().apiKey(apiKey).build()\n",
     "val openAiOptions = OpenAiChatOptions.builder()\n",
-    "    .model(OpenAiApi.ChatModel.GPT_4_O_MINI)\n",
+    "    .model(OpenAiApi.ChatModel.GPT_5_CHAT_LATEST)\n",
     "    .temperature(0.7)\n",
     "    .build()\n",
     "\n",
@@ -84,12 +84,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:14:21.414663Z",
-     "start_time": "2025-12-01T15:14:21.357593Z"
+     "end_time": "2026-02-19T22:40:18.414576Z",
+     "start_time": "2026-02-19T22:40:18.321997Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
-      "Line_6_jupyter"
+      "Line_5_jupyter"
      ]
     }
    },
@@ -103,7 +103,7 @@
     "    .build()\n"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -113,12 +113,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:14:23.656335Z",
-     "start_time": "2025-12-01T15:14:22.578172Z"
+     "end_time": "2026-02-19T22:40:19.668175Z",
+     "start_time": "2026-02-19T22:40:18.424755Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
-      "Line_7_jupyter"
+      "Line_6_jupyter"
      ]
     }
    },
@@ -128,27 +128,29 @@
     {
      "data": {
       "text/plain": [
-       "Why did the scarecrow win an award? \n",
+       "Sure! Here’s one for you:  \n",
        "\n",
-       "Because he was outstanding in his field!"
+       "Why don’t skeletons fight each other?  \n",
+       "\n",
+       "Because they don’t have the guts. 🦴😄"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:14:25.286378Z",
-     "start_time": "2025-12-01T15:14:23.656836Z"
+     "end_time": "2026-02-19T22:40:20.693789Z",
+     "start_time": "2026-02-19T22:40:19.673083Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
-      "Line_8_jupyter"
+      "Line_7_jupyter"
      ]
     }
    },
@@ -158,15 +160,17 @@
     {
      "data": {
       "text/plain": [
-       "The previous message in our chat history was a joke: \"Why did the scarecrow win an award? Because he was outstanding in his field!\""
+       "The previous message in our chat history is the joke I just told you:  \n",
+       "\n",
+       "\"Why don’t skeletons fight each other? Because they don’t have the guts.\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -193,12 +197,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:17:46.724533Z",
-     "start_time": "2025-12-01T15:17:46.639673Z"
+     "end_time": "2026-02-19T22:40:20.801865Z",
+     "start_time": "2026-02-19T22:40:20.694592Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
-      "Line_10_jupyter"
+      "Line_8_jupyter"
      ]
     }
    },
@@ -223,7 +227,7 @@
     "}"
    ],
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -233,12 +237,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:17:51.740272Z",
-     "start_time": "2025-12-01T15:17:48.695125Z"
+     "end_time": "2026-02-19T22:40:21.610851Z",
+     "start_time": "2026-02-19T22:40:20.808462Z"
     },
     "executionRelatedData": {
      "compiledClasses": [
-      "Line_11_jupyter"
+      "Line_9_jupyter"
      ]
     }
    },
@@ -255,10 +259,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CustomLogger.Before: ChatClientRequest[prompt=Prompt{messages=[UserMessage{content='Hi, tell me a joke', metadata={messageType=USER}, messageType=USER}, AssistantMessage [messageType=ASSISTANT, toolCalls=[], textContent=Why did the scarecrow win an award? \n",
+      "CustomLogger.Before: ChatClientRequest[prompt=Prompt{messages=[UserMessage{content='Hi, tell me a joke', metadata={messageType=USER}, messageType=USER}, AssistantMessage [messageType=ASSISTANT, toolCalls=[], textContent=Sure! Here’s one for you:  \n",
       "\n",
-      "Because he was outstanding in his field!, metadata={role=ASSISTANT, messageType=ASSISTANT, finishReason=STOP, refusal=, annotations=[], index=0, id=chatcmpl-ChztWkrp1ETiltxmxtfPP4OvB1ZMf}], UserMessage{content='What is previous message in our chat history?', metadata={messageType=USER}, messageType=USER}, AssistantMessage [messageType=ASSISTANT, toolCalls=[], textContent=The previous message in our chat history was a joke: \"Why did the scarecrow win an award? Because he was outstanding in his field!\", metadata={role=ASSISTANT, messageType=ASSISTANT, finishReason=STOP, refusal=, annotations=[], index=0, id=chatcmpl-ChztXs2RCzayFqZlJQkNppJrLkOOE}], UserMessage{content='Generate HelloWorld in Kotlin', metadata={messageType=USER}, messageType=USER}], modelOptions=OpenAiChatOptions: {\"streamUsage\":false,\"model\":\"gpt-4o-mini\",\"temperature\":0.7}}, context={}]\n",
-      "CustomLogger.After: ChatClientResponse[chatResponse=ChatResponse [metadata={ id: chatcmpl-ChzwrBqARkcbawIpn0trhBxOxmmaR, usage: DefaultUsage{promptTokens=90, completionTokens=77, totalTokens=167}, rateLimit: { @type: org.springframework.ai.openai.metadata.OpenAiRateLimit, requestsLimit: 30000, requestsRemaining: 29999, requestsReset: PT0.002S, tokensLimit: 150000000; tokensRemaining: 149999917; tokensReset: PT0S } }, generations=[Generation[assistantMessage=AssistantMessage [messageType=ASSISTANT, toolCalls=[], textContent=Here’s a simple \"Hello, World!\" program in Kotlin:\n",
+      "Why don’t skeletons fight each other?  \n",
+      "\n",
+      "Because they don’t have the guts. 🦴😄, metadata={role=ASSISTANT, messageType=ASSISTANT, finishReason=STOP, refusal=, index=0, annotations=[], id=chatcmpl-DB6ywKthy6COgW1i2xI9b7IqXqr8L}], UserMessage{content='What is previous message in our chat history?', metadata={messageType=USER}, messageType=USER}, AssistantMessage [messageType=ASSISTANT, toolCalls=[], textContent=The previous message in our chat history is the joke I just told you:  \n",
+      "\n",
+      "\"Why don’t skeletons fight each other? Because they don’t have the guts.\", metadata={role=ASSISTANT, messageType=ASSISTANT, finishReason=STOP, refusal=, index=0, annotations=[], id=chatcmpl-DB6yxncMeSQ4K72dn6eA5qMLFc1lD}], UserMessage{content='Generate HelloWorld in Kotlin', metadata={messageType=USER}, messageType=USER}], modelOptions=OpenAiChatOptions: {\"streamUsage\":false,\"model\":\"gpt-5-chat-latest\",\"temperature\":0.7}}, context={}]\n",
+      "CustomLogger.After: ChatClientResponse[chatResponse=ChatResponse [metadata={ id: chatcmpl-DB6yyg8JWUautoLd4rCeuXk3mrHDp, usage: DefaultUsage{promptTokens=109, completionTokens=50, totalTokens=159}, rateLimit: { @type: org.springframework.ai.openai.metadata.OpenAiRateLimit, requestsLimit: 15000, requestsRemaining: 14999, requestsReset: PT0.004S, tokensLimit: 40000000; tokensRemaining: 39999904; tokensReset: PT0S } }, generations=[Generation[assistantMessage=AssistantMessage [messageType=ASSISTANT, toolCalls=[], textContent=Sure! Here’s a simple **Hello World** program written in Kotlin:\n",
       "\n",
       "```kotlin\n",
       "fun main() {\n",
@@ -266,13 +274,17 @@
       "}\n",
       "```\n",
       "\n",
-      "You can run this code in any Kotlin environment, such as an IDE like IntelliJ IDEA or an online Kotlin compiler. Just copy and paste the code, and it will print \"Hello, World!\" to the console when executed., metadata={role=ASSISTANT, messageType=ASSISTANT, finishReason=STOP, refusal=, annotations=[], index=0, id=chatcmpl-ChzwrBqARkcbawIpn0trhBxOxmmaR}], chatGenerationMetadata=DefaultChatGenerationMetadata[finishReason='STOP', filters=0, metadata=0]]]], context={}]\n"
+      "When you run this program, it will print:\n",
+      "\n",
+      "```\n",
+      "Hello, World!\n",
+      "```, metadata={role=ASSISTANT, messageType=ASSISTANT, finishReason=STOP, refusal=, index=0, annotations=[], id=chatcmpl-DB6yyg8JWUautoLd4rCeuXk3mrHDp}], chatGenerationMetadata=DefaultChatGenerationMetadata[finishReason='STOP', filters=0, metadata=0]]]], context={}]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Here’s a simple \"Hello, World!\" program in Kotlin:\n",
+       "Sure! Here’s a simple **Hello World** program written in Kotlin:\n",
        "\n",
        "```kotlin\n",
        "fun main() {\n",
@@ -280,15 +292,19 @@
        "}\n",
        "```\n",
        "\n",
-       "You can run this code in any Kotlin environment, such as an IDE like IntelliJ IDEA or an online Kotlin compiler. Just copy and paste the code, and it will print \"Hello, World!\" to the console when executed."
+       "When you run this program, it will print:\n",
+       "\n",
+       "```\n",
+       "Hello, World!\n",
+       "```"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 7
   }
  ],
  "metadata": {
