--- a/notebooks/spring-ai/tutorials/7. RAG.ipynb
+++ b/notebooks/spring-ai/tutorials/7. RAG.ipynb
@@ -25,8 +25,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:19:14.569056Z",
-     "start_time": "2025-12-01T15:19:12.369170Z"
+     "end_time": "2026-02-19T22:40:48.657776Z",
+     "start_time": "2026-02-19T22:40:45.745107Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_3_jupyter",
+      "Line_4_jupyter",
+      "Line_5_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -41,8 +48,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:19:16.148725Z",
-     "start_time": "2025-12-01T15:19:15.830712Z"
+     "end_time": "2026-02-19T22:40:49.184840Z",
+     "start_time": "2026-02-19T22:40:48.658448Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_6_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -51,7 +63,7 @@
     "\n",
     "val openAiApi = OpenAiApi.builder().apiKey(apiKey).build()\n",
     "val openAiOptions = OpenAiChatOptions.builder()\n",
-    "    .model(OpenAiApi.ChatModel.GPT_4_O_MINI)\n",
+    "    .model(OpenAiApi.ChatModel.GPT_5_CHAT_LATEST)\n",
     "    .temperature(0.7)\n",
     "    .build()"
    ],
@@ -70,8 +82,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:19:17.435597Z",
-     "start_time": "2025-12-01T15:19:17.387313Z"
+     "end_time": "2026-02-19T22:40:49.227943Z",
+     "start_time": "2026-02-19T22:40:49.187073Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_7_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -92,8 +109,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:19:18.698189Z",
-     "start_time": "2025-12-01T15:19:18.599906Z"
+     "end_time": "2026-02-19T22:40:49.424542Z",
+     "start_time": "2026-02-19T22:40:49.228386Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_8_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -117,8 +139,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:19:21.012921Z",
-     "start_time": "2025-12-01T15:19:19.814717Z"
+     "end_time": "2026-02-19T22:40:51.709684Z",
+     "start_time": "2026-02-19T22:40:49.424967Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_9_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -150,8 +177,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T15:21:14.964547Z",
-     "start_time": "2025-12-01T15:21:12.521315Z"
+     "end_time": "2026-02-19T22:40:52.997972Z",
+     "start_time": "2026-02-19T22:40:51.710257Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_10_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -174,15 +206,15 @@
     {
      "data": {
       "text/plain": [
-       "The current version of Kotlin is 2.1.20, which was published on March 20, 2025. You can find more information about it on [GitHub](https://github.com/jetbrains/kotlin)."
+       "According to the provided context, the current version of Kotlin is **2.1.20**, published on **March 20, 2025**."
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 6
   }
  ],
  "metadata": {
